[package]
name = "podbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pod = { git = "https://github.com/distributed-epfl/pod" }
talk = { git = "https://github.com/distributed-epfl/talk" }

bincode = { version = "~1.3" }
lapp = { version = "0.4.0" }
tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-std", "io-util", "sync", "time" ] }
